--- a/requirements.txt
+++ b/requirements.txt
@@ -1,145 +1,4 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-annotated-types==0.5.0
-ansicon==1.89.0
-anyio==3.6.2
-appdirs==1.4.4
-APScheduler==3.10.1
-asgiref==3.7.2
-astor==0.8.1
-async-lru==2.0.2
-async-timeout==4.0.2
-async-tio==1.3.2
-attrs==23.1.0
-baidu-aip==4.16.11
-beautifulsoup4==4.12.2
-BingImageCreator==0.4.4
-blessed==1.20.0
-certifi==2022.6.15
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==2.1.0
-click==8.1.3
-colorama==0.4.5
-corpwechatbot==0.6.4
-coverage==7.3.0
-cptools==2.0.1
-cryptography==40.0.2
-Deprecated==1.2.14
-EdgeGPT==0.1.22.1
-exceptiongroup==1.1.3
-Faker==19.3.0
-fastapi==0.95.1
-feishu-python-sdk==0.1.4
-filelock==3.12.4
-flasgger==0.9.7.1
-Flask==2.2.5
-Flask-Cors==3.0.10
-frozenlist==1.3.3
-fsspec==2023.9.1
-gevent==23.9.0.post1
-git-python==1.0.3
-gitdb==4.0.10
-GitPython==3.1.31
-greenlet==2.0.2
-h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
-huggingface-hub==0.16.4
-idna==3.3
-importlib-metadata==6.8.0
-iniconfig==2.0.0
-inquirer==3.1.3
-install==1.3.5
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jinxed==1.2.0
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-litellm==0.1.674
-Logbook==1.5.3
-loguru==0.6.0
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-mdurl==0.1.2
-mistune==3.0.1
-multidict==6.0.4
-mysql==0.0.3
-mysql-connector-python==8.0.33
-mysqlclient==2.2.0
-nakuru-project==1.0.1
-numpy==1.24.2
-open-interpreter==0.1.4
-openai==0.27.8
-OpenAIAuth==0.3.6
-packaging==23.1
-Pandora-ChatGPT==1.3.1
-Pillow==9.4.0
-pluggy==1.3.0
-prompt-toolkit==3.0.39
-protobuf==3.20.3
-psutil==5.9.5
-pycparser==2.21
-pycryptodome==3.18.0
-pydantic==1.10.13
-pydantic_core==2.4.0
-PyGetWindow==0.0.9
-PyGithub==1.59.1
-Pygments==2.15.1
-PyJWT==2.6.0
-PyMySQL==1.1.0
-PyNaCl==1.5.0
-pyperclip==1.8.2
-pyreadline3==3.4.1
-PyRect==0.2.0
-PySocks==1.7.1
-pytest==7.4.0
-pytest-cov==4.1.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-editor==1.0.4
-pytz==2023.3
-pywin32==306
-PyYAML==6.0
-qq-botpy==1.1.2
-readchar==4.0.5
-referencing==0.30.2
-regex==2023.6.3
-requests==2.31.0
-revChatGPT==5.0.4
-rfc3986==1.5.0
-rich==13.5.2
-rpds-py==0.10.3
-schedule==1.2.0
-sentry-sdk==1.17.0
-six==1.16.0
-slack-sdk==3.21.3
-smmap==5.0.0
-sniffio==1.3.0
-socksio==1.0.0
-soupsieve==2.4.1
-sparkdesk-api==1.1.0
-starlette==0.26.1
-tiktoken==0.4.0
-tokentrim==0.1.10
-tomli==2.0.1
-tqdm==4.65.0
-typing_extensions==4.8.0
-tzdata==2023.3
-tzlocal==5.0.1
-urllib3==1.26.11
-uvicorn==0.22.0
-vercel-kv-sdk==0.1.2
-waitress==2.1.2
-wcwidth==0.2.6
-websocket==0.2.1
-websocket-client==1.6.3
-websockets==11.0.3
-Werkzeug==2.2.3
-wget==3.2
-win32-setctime==1.1.0
-wrapt==1.15.0
-yarl==1.9.2
-zipp==3.16.2
-zope.event==5.0
-zope.interface==6.0
+uvicorn
+fastapi
+requests
+vercel_kv_sdk
